LexerGrammar/grammar.output
Terminals unused in grammar

    TOKEN_EOF
    TOKEN_UNKNOWN
    TOKEN_INCREMENT


State 1 conflicts: 2 shift/reduce
State 27 conflicts: 3 shift/reduce
State 28 conflicts: 6 shift/reduce
State 29 conflicts: 2 shift/reduce
State 30 conflicts: 2 shift/reduce
State 46 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Body

    2 Body: %empty
    3     | Declaration Body
    4     | Statement Body
    5     | Expression Body

    6 Declaration: TOKEN_VAR TOKEN_IDENTIFIER TOKEN_SEMI
    7            | TOKEN_VAR TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TOKEN_SEMI

    8 Expression: Relation
    9           | Relation TOKEN_AND Relation
   10           | Relation TOKEN_OR Relation
   11           | Relation TOKEN_XOR Relation

   12 Relation: Factor
   13         | Factor TOKEN_LESS Factor
   14         | Factor TOKEN_LEQ Factor
   15         | Factor TOKEN_GREAT Factor
   16         | Factor TOKEN_GEQ Factor
   17         | Factor TOKEN_EQUAL Factor
   18         | Factor TOKEN_NEQ Factor

   19 Factor: Term
   20       | Term TOKEN_PLUS Factor
   21       | Term TOKEN_MINUS Factor

   22 Term: Unary
   23     | Unary TOKEN_MULT Term
   24     | Unary TOKEN_DIV Term

   25 Unary: Primary
   26      | TOKEN_PLUS Primary
   27      | TOKEN_MINUS Primary
   28      | TOKEN_NOT Primary
   29      | Literal
   30      | TOKEN_LPAREN Expression TOKEN_RPAREN
   31      | TOKEN_PLUS Primary TOKEN_IS TypeIndicator
   32      | TOKEN_MINUS Primary TOKEN_IS TypeIndicator
   33      | TOKEN_NOT Primary TOKEN_IS TypeIndicator
   34      | Primary TOKEN_IS TypeIndicator

   35 Primary: TOKEN_IDENTIFIER Tails
   36        | TOKEN_READINT
   37        | TOKEN_READREAL
   38        | TOKEN_READSTRING

   39 Tails: %empty
   40      | Tail Tails

   41 Tail: TOKEN_DOT TOKEN_INT_LITERAL
   42     | TOKEN_DOT TOKEN_IDENTIFIER
   43     | TOKEN_LSQUARE Expression TOKEN_RSQUARE
   44     | TOKEN_LPAREN Expressions TOKEN_RPAREN

   45 Statement: Assignment
   46          | Print
   47          | Return
   48          | If
   49          | Loop

   50 Assignment: Primary TOKEN_ASSIGNMENT Expression TOKEN_SEMI

   51 Print: TOKEN_PRINT Expressions TOKEN_SEMI

   52 Expressions: Expression
   53            | Expression TOKEN_COMMA Expressions

   54 Return: TOKEN_RETURN Expression TOKEN_SEMI
   55       | TOKEN_RETURN TOKEN_SEMI

   56 If: TOKEN_IF Expression TOKEN_THEN Body TOKEN_END
   57   | TOKEN_IF Expression TOKEN_THEN Body TOKEN_ELSE Body TOKEN_END

   58 Loop: TOKEN_WHILE Expression LoopBody
   59     | TOKEN_FOR TOKEN_IDENTIFIER TOKEN_IN TypeIndicator LoopBody

   60 LoopBody: TOKEN_LOOP Body TOKEN_END

   61 TypeIndicator: TOKEN_INT
   62              | TOKEN_REAL
   63              | TOKEN_BOOL
   64              | TOKEN_STRING
   65              | TOKEN_EMPTY
   66              | ArrayLiteral
   67              | TupleLiteral
   68              | TOKEN_FUNC

   69 Literal: TOKEN_INT_LITERAL
   70        | TOKEN_REAL_LITERAL
   71        | TOKEN_TRUE
   72        | TOKEN_FALSE
   73        | TOKEN_STRING_LITERAL
   74        | ArrayLiteral
   75        | TupleLiteral
   76        | FunctionLiteral

   77 ArrayLiteral: TOKEN_LSQUARE TOKEN_RSQUARE
   78             | TOKEN_LSQUARE Expressions TOKEN_RSQUARE

   79 TupleLiteral: TOKEN_LCURLY TOKEN_RCURLY
   80             | TOKEN_LCURLY TOKEN_IDENTIFIER TupleTail
   81             | TOKEN_LCURLY TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TupleTail

   82 TupleTail: TOKEN_RCURLY
   83          | TOKEN_COMMA TOKEN_IDENTIFIER TupleTail
   84          | TOKEN_COMMA TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TupleTail

   85 FunctionLiteral: TOKEN_FUNC FunBody
   86                | TOKEN_FUNC Parameters FunBody

   87 Parameters: TOKEN_LPAREN Identifiers TOKEN_RPAREN

   88 Identifiers: TOKEN_IDENTIFIER
   89            | TOKEN_IDENTIFIER TOKEN_COMMA Identifiers

   90 FunBody: TOKEN_IS Body TOKEN_END
   91        | TOKEN_FUNCTOR Expression


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_ASSIGNMENT (258) 7 50 81 84
    TOKEN_FUNCTOR (259) 91
    TOKEN_EOF (260)
    TOKEN_UNKNOWN (261)
    TOKEN_IDENTIFIER (262) 6 7 35 42 59 80 81 83 84 88 89
    TOKEN_INT_LITERAL (263) 41 69
    TOKEN_REAL_LITERAL (264) 70
    TOKEN_STRING_LITERAL (265) 73
    TOKEN_TRUE (266) 71
    TOKEN_FALSE (267) 72
    TOKEN_FUNC (268) 68 85 86
    TOKEN_END (269) 56 57 60 90
    TOKEN_IF (270) 56 57
    TOKEN_THEN (271) 56 57
    TOKEN_ELSE (272) 57
    TOKEN_PRINT (273) 51
    TOKEN_RETURN (274) 54 55
    TOKEN_LOOP (275) 60
    TOKEN_VAR (276) 6 7
    TOKEN_WHILE (277) 58
    TOKEN_FOR (278) 59
    TOKEN_IN (279) 59
    TOKEN_AND (280) 9
    TOKEN_OR (281) 10
    TOKEN_XOR (282) 11
    TOKEN_NOT (283) 28 33
    TOKEN_IS (284) 31 32 33 34 90
    TOKEN_EMPTY (285) 65
    TOKEN_INT (286) 61
    TOKEN_REAL (287) 62
    TOKEN_BOOL (288) 63
    TOKEN_STRING (289) 64
    TOKEN_LPAREN (290) 30 44 87
    TOKEN_RPAREN (291) 30 44 87
    TOKEN_LSQUARE (292) 43 77 78
    TOKEN_RSQUARE (293) 43 77 78
    TOKEN_LCURLY (294) 79 80 81
    TOKEN_RCURLY (295) 79 82
    TOKEN_SEMI (296) 6 7 50 51 54 55
    TOKEN_COMMA (297) 53 83 84 89
    TOKEN_DOT (298) 41 42
    TOKEN_PLUS (299) 20 26 31
    TOKEN_MINUS (300) 21 27 32
    TOKEN_MULT (301) 23
    TOKEN_DIV (302) 24
    TOKEN_EQUAL (303) 17
    TOKEN_NEQ (304) 18
    TOKEN_LESS (305) 13
    TOKEN_LEQ (306) 14
    TOKEN_GREAT (307) 15
    TOKEN_GEQ (308) 16
    TOKEN_INCREMENT (309)
    TOKEN_READINT (310) 36
    TOKEN_READREAL (311) 37
    TOKEN_READSTRING (312) 38


Nonterminals, with rules where they appear

    $accept (58)
        on left: 0
    Program (59)
        on left: 1
        on right: 0
    Body (60)
        on left: 2 3 4 5
        on right: 1 3 4 5 56 57 60 90
    Declaration (61)
        on left: 6 7
        on right: 3
    Expression (62)
        on left: 8 9 10 11
        on right: 5 7 30 43 50 52 53 54 56 57 58 81 84 91
    Relation (63)
        on left: 12 13 14 15 16 17 18
        on right: 8 9 10 11
    Factor (64)
        on left: 19 20 21
        on right: 12 13 14 15 16 17 18 20 21
    Term (65)
        on left: 22 23 24
        on right: 19 20 21 23 24
    Unary (66)
        on left: 25 26 27 28 29 30 31 32 33 34
        on right: 22 23 24
    Primary (67)
        on left: 35 36 37 38
        on right: 25 26 27 28 31 32 33 34 50
    Tails (68)
        on left: 39 40
        on right: 35 40
    Tail (69)
        on left: 41 42 43 44
        on right: 40
    Statement (70)
        on left: 45 46 47 48 49
        on right: 4
    Assignment (71)
        on left: 50
        on right: 45
    Print (72)
        on left: 51
        on right: 46
    Expressions (73)
        on left: 52 53
        on right: 44 51 53 78
    Return (74)
        on left: 54 55
        on right: 47
    If (75)
        on left: 56 57
        on right: 48
    Loop (76)
        on left: 58 59
        on right: 49
    LoopBody (77)
        on left: 60
        on right: 58 59
    TypeIndicator (78)
        on left: 61 62 63 64 65 66 67 68
        on right: 31 32 33 34 59
    Literal (79)
        on left: 69 70 71 72 73 74 75 76
        on right: 29
    ArrayLiteral (80)
        on left: 77 78
        on right: 66 74
    TupleLiteral (81)
        on left: 79 80 81
        on right: 67 75
    TupleTail (82)
        on left: 82 83 84
        on right: 80 81 83 84
    FunctionLiteral (83)
        on left: 85 86
        on right: 76
    Parameters (84)
        on left: 87
        on right: 86
    Identifiers (85)
        on left: 88 89
        on right: 87 89
    FunBody (86)
        on left: 90 91
        on right: 85 86


State 0

    0 $accept: • Program $end

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 2
    TOKEN_REAL_LITERAL    shift, and go to state 3
    TOKEN_STRING_LITERAL  shift, and go to state 4
    TOKEN_TRUE            shift, and go to state 5
    TOKEN_FALSE           shift, and go to state 6
    TOKEN_FUNC            shift, and go to state 7
    TOKEN_IF              shift, and go to state 8
    TOKEN_PRINT           shift, and go to state 9
    TOKEN_RETURN          shift, and go to state 10
    TOKEN_VAR             shift, and go to state 11
    TOKEN_WHILE           shift, and go to state 12
    TOKEN_FOR             shift, and go to state 13
    TOKEN_NOT             shift, and go to state 14
    TOKEN_LPAREN          shift, and go to state 15
    TOKEN_LSQUARE         shift, and go to state 16
    TOKEN_LCURLY          shift, and go to state 17
    TOKEN_PLUS            shift, and go to state 18
    TOKEN_MINUS           shift, and go to state 19
    TOKEN_READINT         shift, and go to state 20
    TOKEN_READREAL        shift, and go to state 21
    TOKEN_READSTRING      shift, and go to state 22

    $default  reduce using rule 2 (Body)

    Program          go to state 23
    Body             go to state 24
    Declaration      go to state 25
    Expression       go to state 26
    Relation         go to state 27
    Factor           go to state 28
    Term             go to state 29
    Unary            go to state 30
    Primary          go to state 31
    Statement        go to state 32
    Assignment       go to state 33
    Print            go to state 34
    Return           go to state 35
    If               go to state 36
    Loop             go to state 37
    Literal          go to state 38
    ArrayLiteral     go to state 39
    TupleLiteral     go to state 40
    FunctionLiteral  go to state 41


State 1

   35 Primary: TOKEN_IDENTIFIER • Tails

    TOKEN_LPAREN   shift, and go to state 42
    TOKEN_LSQUARE  shift, and go to state 43
    TOKEN_DOT      shift, and go to state 44

    TOKEN_LPAREN   [reduce using rule 39 (Tails)]
    TOKEN_LSQUARE  [reduce using rule 39 (Tails)]
    $default       reduce using rule 39 (Tails)

    Tails  go to state 45
    Tail   go to state 46

    shift/reduce conflict on token TOKEN_LSQUARE:
       39 Tails: • %empty
       43 Tail: • TOKEN_LSQUARE Expression TOKEN_RSQUARE
      First example: TOKEN_IDENTIFIER • TOKEN_LSQUARE Expression TOKEN_RSQUARE Tails Body $end
      Shift derivation
        $accept
        ↳ Program                                                                                $end
          ↳ Body
            ↳ Expression                                                                    Body
              ↳ Relation
                ↳ Factor
                  ↳ Term
                    ↳ Primary
                      ↳ TOKEN_IDENTIFIER Tails
                                         ↳ Tail                                       Tails
                                           ↳ • TOKEN_LSQUARE Expression TOKEN_RSQUARE
      Second example: TOKEN_IDENTIFIER • TOKEN_LSQUARE TOKEN_RSQUARE Body $end
      Reduce derivation
        $accept
        ↳ Program                                                                                 $end
          ↳ Body
            ↳ Expression                         Body
              ↳ Relation                         ↳ Expression                                Body
                ↳ Factor                           ↳ Relation
                  ↳ Term                             ↳ Factor
                    ↳ Unary                            ↳ Term
                      ↳ Primary                          ↳ Unary
                        ↳ TOKEN_IDENTIFIER Tails           ↳ Literal
                                           ↳ •               ↳ ArrayLiteral
                                                               ↳ TOKEN_LSQUARE TOKEN_RSQUARE

    shift/reduce conflict on token TOKEN_LPAREN:
       39 Tails: • %empty
       44 Tail: • TOKEN_LPAREN Expressions TOKEN_RPAREN
      First example: TOKEN_IDENTIFIER • TOKEN_LPAREN Expressions TOKEN_RPAREN Tails Body $end
      Shift derivation
        $accept
        ↳ Program                                                                               $end
          ↳ Body
            ↳ Expression                                                                   Body
              ↳ Relation
                ↳ Factor
                  ↳ Term
                    ↳ Primary
                      ↳ TOKEN_IDENTIFIER Tails
                                         ↳ Tail                                      Tails
                                           ↳ • TOKEN_LPAREN Expressions TOKEN_RPAREN
      Second example: TOKEN_IDENTIFIER • TOKEN_LPAREN Expression TOKEN_RPAREN Body $end
      Reduce derivation
        $accept
        ↳ Program                                                                                      $end
          ↳ Body
            ↳ Expression                         Body
              ↳ Relation                         ↳ Expression                                     Body
                ↳ Factor                           ↳ Relation
                  ↳ Term                             ↳ Factor
                    ↳ Unary                            ↳ Term
                      ↳ Primary                          ↳ Unary
                        ↳ TOKEN_IDENTIFIER Tails           ↳ TOKEN_LPAREN Expression TOKEN_RPAREN
                                           ↳ •



State 2

   69 Literal: TOKEN_INT_LITERAL •

    $default  reduce using rule 69 (Literal)


State 3

   70 Literal: TOKEN_REAL_LITERAL •

    $default  reduce using rule 70 (Literal)


State 4

   73 Literal: TOKEN_STRING_LITERAL •

    $default  reduce using rule 73 (Literal)


State 5

   71 Literal: TOKEN_TRUE •

    $default  reduce using rule 71 (Literal)


State 6

   72 Literal: TOKEN_FALSE •

    $default  reduce using rule 72 (Literal)


State 7

   85 FunctionLiteral: TOKEN_FUNC • FunBody
   86                | TOKEN_FUNC • Parameters FunBody

    TOKEN_FUNCTOR  shift, and go to state 47
    TOKEN_IS       shift, and go to state 48
    TOKEN_LPAREN   shift, and go to state 49

    Parameters  go to state 50
    FunBody     go to state 51


State 8

   56 If: TOKEN_IF • Expression TOKEN_THEN Body TOKEN_END
   57   | TOKEN_IF • Expression TOKEN_THEN Body TOKEN_ELSE Body TOKEN_END

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 2
    TOKEN_REAL_LITERAL    shift, and go to state 3
    TOKEN_STRING_LITERAL  shift, and go to state 4
    TOKEN_TRUE            shift, and go to state 5
    TOKEN_FALSE           shift, and go to state 6
    TOKEN_FUNC            shift, and go to state 7
    TOKEN_NOT             shift, and go to state 14
    TOKEN_LPAREN          shift, and go to state 15
    TOKEN_LSQUARE         shift, and go to state 16
    TOKEN_LCURLY          shift, and go to state 17
    TOKEN_PLUS            shift, and go to state 18
    TOKEN_MINUS           shift, and go to state 19
    TOKEN_READINT         shift, and go to state 20
    TOKEN_READREAL        shift, and go to state 21
    TOKEN_READSTRING      shift, and go to state 22

    Expression       go to state 52
    Relation         go to state 27
    Factor           go to state 28
    Term             go to state 29
    Unary            go to state 30
    Primary          go to state 53
    Literal          go to state 38
    ArrayLiteral     go to state 39
    TupleLiteral     go to state 40
    FunctionLiteral  go to state 41


State 9

   51 Print: TOKEN_PRINT • Expressions TOKEN_SEMI

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 2
    TOKEN_REAL_LITERAL    shift, and go to state 3
    TOKEN_STRING_LITERAL  shift, and go to state 4
    TOKEN_TRUE            shift, and go to state 5
    TOKEN_FALSE           shift, and go to state 6
    TOKEN_FUNC            shift, and go to state 7
    TOKEN_NOT             shift, and go to state 14
    TOKEN_LPAREN          shift, and go to state 15
    TOKEN_LSQUARE         shift, and go to state 16
    TOKEN_LCURLY          shift, and go to state 17
    TOKEN_PLUS            shift, and go to state 18
    TOKEN_MINUS           shift, and go to state 19
    TOKEN_READINT         shift, and go to state 20
    TOKEN_READREAL        shift, and go to state 21
    TOKEN_READSTRING      shift, and go to state 22

    Expression       go to state 54
    Relation         go to state 27
    Factor           go to state 28
    Term             go to state 29
    Unary            go to state 30
    Primary          go to state 53
    Expressions      go to state 55
    Literal          go to state 38
    ArrayLiteral     go to state 39
    TupleLiteral     go to state 40
    FunctionLiteral  go to state 41


State 10

   54 Return: TOKEN_RETURN • Expression TOKEN_SEMI
   55       | TOKEN_RETURN • TOKEN_SEMI

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 2
    TOKEN_REAL_LITERAL    shift, and go to state 3
    TOKEN_STRING_LITERAL  shift, and go to state 4
    TOKEN_TRUE            shift, and go to state 5
    TOKEN_FALSE           shift, and go to state 6
    TOKEN_FUNC            shift, and go to state 7
    TOKEN_NOT             shift, and go to state 14
    TOKEN_LPAREN          shift, and go to state 15
    TOKEN_LSQUARE         shift, and go to state 16
    TOKEN_LCURLY          shift, and go to state 17
    TOKEN_SEMI            shift, and go to state 56
    TOKEN_PLUS            shift, and go to state 18
    TOKEN_MINUS           shift, and go to state 19
    TOKEN_READINT         shift, and go to state 20
    TOKEN_READREAL        shift, and go to state 21
    TOKEN_READSTRING      shift, and go to state 22

    Expression       go to state 57
    Relation         go to state 27
    Factor           go to state 28
    Term             go to state 29
    Unary            go to state 30
    Primary          go to state 53
    Literal          go to state 38
    ArrayLiteral     go to state 39
    TupleLiteral     go to state 40
    FunctionLiteral  go to state 41


State 11

    6 Declaration: TOKEN_VAR • TOKEN_IDENTIFIER TOKEN_SEMI
    7            | TOKEN_VAR • TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TOKEN_SEMI

    TOKEN_IDENTIFIER  shift, and go to state 58


State 12

   58 Loop: TOKEN_WHILE • Expression LoopBody

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 2
    TOKEN_REAL_LITERAL    shift, and go to state 3
    TOKEN_STRING_LITERAL  shift, and go to state 4
    TOKEN_TRUE            shift, and go to state 5
    TOKEN_FALSE           shift, and go to state 6
    TOKEN_FUNC            shift, and go to state 7
    TOKEN_NOT             shift, and go to state 14
    TOKEN_LPAREN          shift, and go to state 15
    TOKEN_LSQUARE         shift, and go to state 16
    TOKEN_LCURLY          shift, and go to state 17
    TOKEN_PLUS            shift, and go to state 18
    TOKEN_MINUS           shift, and go to state 19
    TOKEN_READINT         shift, and go to state 20
    TOKEN_READREAL        shift, and go to state 21
    TOKEN_READSTRING      shift, and go to state 22

    Expression       go to state 59
    Relation         go to state 27
    Factor           go to state 28
    Term             go to state 29
    Unary            go to state 30
    Primary          go to state 53
    Literal          go to state 38
    ArrayLiteral     go to state 39
    TupleLiteral     go to state 40
    FunctionLiteral  go to state 41


State 13

   59 Loop: TOKEN_FOR • TOKEN_IDENTIFIER TOKEN_IN TypeIndicator LoopBody

    TOKEN_IDENTIFIER  shift, and go to state 60


State 14

   28 Unary: TOKEN_NOT • Primary
   33      | TOKEN_NOT • Primary TOKEN_IS TypeIndicator

    TOKEN_IDENTIFIER  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 20
    TOKEN_READREAL    shift, and go to state 21
    TOKEN_READSTRING  shift, and go to state 22

    Primary  go to state 61


State 15

   30 Unary: TOKEN_LPAREN • Expression TOKEN_RPAREN

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 2
    TOKEN_REAL_LITERAL    shift, and go to state 3
    TOKEN_STRING_LITERAL  shift, and go to state 4
    TOKEN_TRUE            shift, and go to state 5
    TOKEN_FALSE           shift, and go to state 6
    TOKEN_FUNC            shift, and go to state 7
    TOKEN_NOT             shift, and go to state 14
    TOKEN_LPAREN          shift, and go to state 15
    TOKEN_LSQUARE         shift, and go to state 16
    TOKEN_LCURLY          shift, and go to state 17
    TOKEN_PLUS            shift, and go to state 18
    TOKEN_MINUS           shift, and go to state 19
    TOKEN_READINT         shift, and go to state 20
    TOKEN_READREAL        shift, and go to state 21
    TOKEN_READSTRING      shift, and go to state 22

    Expression       go to state 62
    Relation         go to state 27
    Factor           go to state 28
    Term             go to state 29
    Unary            go to state 30
    Primary          go to state 53
    Literal          go to state 38
    ArrayLiteral     go to state 39
    TupleLiteral     go to state 40
    FunctionLiteral  go to state 41


State 16

   77 ArrayLiteral: TOKEN_LSQUARE • TOKEN_RSQUARE
   78             | TOKEN_LSQUARE • Expressions TOKEN_RSQUARE

    TOKEN_IDENTIFIER      shift, and go to state 1
    TOKEN_INT_LITERAL     shift, and go to state 2
    TOKEN_REAL_LITERAL    shift, and go to state 3
    TOKEN_STRING_LITERAL  shift, and go to state 4
    TOKEN_TRUE            shift, and go to state 5
    TOKEN_FALSE           shift, and go to state 6
    TOKEN_FUNC            shift, and go to state 7
    TOKEN_NOT             shift, and go to state 14
    TOKEN_LPAREN          shift, and go to state 15
    TOKEN_LSQUARE         shift, and go to state 16
    TOKEN_RSQUARE         shift, and go to state 63
    TOKEN_LCURLY          shift, and go to state 17
    TOKEN_PLUS            shift, and go to state 18
    TOKEN_MINUS           shift, and go to state 19
    TOKEN_READINT         shift, and go to state 20
    TOKEN_READREAL        shift, and go to state 21
    TOKEN_READSTRING      shift, and go to state 22

    Expression       go to state 54
    Relation         go to state 27
    Factor           go to state 28
    Term             go to state 29
    Unary            go to state 30
    Primary          go to state 53
    Expressions      go to state 64
    Literal          go to state 38
    ArrayLiteral     go to state 39
    TupleLiteral     go to state 40
    FunctionLiteral  go to state 41


State 17

   79 TupleLiteral: TOKEN_LCURLY • TOKEN_RCURLY
   80             | TOKEN_LCURLY • TOKEN_IDENTIFIER TupleTail
   81             | TOKEN_LCURLY • TOKEN_IDENTIFIER TOKEN_ASSIGNMENT Expression TupleTail

    TOKEN_IDENTIFIER  shift, and go to state 65
    TOKEN_RCURLY      shift, and go to state 66


State 18

   26 Unary: TOKEN_PLUS • Primary
   31      | TOKEN_PLUS • Primary TOKEN_IS TypeIndicator

    TOKEN_IDENTIFIER  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 20
    TOKEN_READREAL    shift, and go to state 21
    TOKEN_READSTRING  shift, and go to state 22

    Primary  go to state 67


State 19

   27 Unary: TOKEN_MINUS • Primary
   32      | TOKEN_MINUS • Primary TOKEN_IS TypeIndicator

    TOKEN_IDENTIFIER  shift, and go to state 1
    TOKEN_READINT     shift, and go to state 20
    TOKEN_READREAL    shift, and go to state 21
    TOKEN_READSTRING  shift, and go to state 22

    Primary  go to state 68


State 20

   36 Primary: TOKEN_READINT •

    $default  reduce using rule 36 (Primary)


State 21

   37 Primary: TOKEN_READREAL •

    $default  reduce using rule 37 (Primary)


State 22

   38 Primary: TOKEN_READSTRING •

    $default  reduce using rule 38 (Primary)


State 23

    0 $accept: Program • $end

    $end  shift, and go to state 69


State 24

    1 Program: Body •

    $default  reduce using rule 1 (Program)


State 25

    3 Body: Declaration • Body
